fix overflow

--- a/src/widgets/PensionAnnuity/ui/styles.module.scss
+++ b/src/widgets/PensionAnnuity/ui/styles.module.scss
@@ -1,5 +1,5 @@
 .pension {
-  overflow-x: hidden;
+  overflow: hidden;
   padding-top: 120px;
   border-bottom: 1px solid #fff;
   background-image: url("/bg1.png");
